# ChangeLog for dev-lang/rust
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/rust/ChangeLog,v 1.5 2014/10/18 12:48:43 jauhien Exp $

*rust-0.12.0 (18 Oct 2014)
*rust-999-r1 (18 Oct 2014)
*rust-9999-r3 (18 Oct 2014)
*rust-0.11.0-r2 (18 Oct 2014)

  18 Oct 2014; Jauhien Piatlicki <jauhien@gentoo.org>
  +files/rust-0.12.0-libdir.patch, +files/rust-0.12.0-stage0.patch,
  +rust-0.11.0-r2.ebuild, +rust-0.12.0.ebuild, +rust-999-r1.ebuild,
  +rust-9999-r3.ebuild, -files/rust-9999-libdir.patch, -rust-0.11.0-r1.ebuild,
  -rust-999.ebuild, -rust-9999-r2.ebuild:
  version bump, switch to new eselect version

*rust-0.11.0-r1 (29 Aug 2014)
*rust-999 (29 Aug 2014)
*rust-9999-r2 (29 Aug 2014)

  29 Aug 2014; Jauhien Piatlicki <jauhien@gentoo.org>
  +files/rust-0.11.0-libdir.patch, +files/rust-9999-libdir.patch,
  +rust-0.11.0-r1.ebuild, +rust-999.ebuild, +rust-9999-r2.ebuild,
  -rust-0.10.ebuild, -rust-0.11.0.ebuild, -rust-9999.ebuild,
  files/50rust-mode-gentoo.el, files/rust-0.12.0-no-ldconfig.patch,
  metadata.xml:
  Add slotting to rust ebuilds  Add these slots: (major.minor) rust release
  (nightly) nightly version (git) git master branch  Remove old unslotted
  versions

*rust-9999 (31 Jul 2014)

  31 Jul 2014; Jauhien Piatlicki <jauhien@gentoo.org>
  +files/rust-0.12.0-no-ldconfig.patch, +rust-9999.ebuild:
  add live version, thanks to Heather Cynede for patch

*rust-0.11.0 (31 Jul 2014)

  31 Jul 2014; Jauhien Piatlicki <jauhien@gentoo.org>
  +files/rust-0.11.0-stage0.patch, +rust-0.11.0.ebuild, metadata.xml:
  version bump, closing bug #516466

*rust-0.10 (18 May 2014)

  18 May 2014; Jauhien Piatlicki <jauhien@gentoo.org>
  +files/50rust-mode-gentoo.el, +metadata.xml, +rust-0.10.ebuild:
  Initial import, based on the rust overlay work, thanks to Heather