@@ -15,24 +15,24 @@ DIST rust-0.12.0-x86_64-unknown-linux-gnu.tar.gz 110096209 SHA256 bb3e2eda2bd256
 DIST rust-0.12.0.tar.gz 21223176 SHA256 883e66b24d90d9957c5c538469fcde6f0668e5fb6448beecfc60884060e769b7 SHA512 b01f6ae97fb012ab701b47a8f240a764d0a6f3ee2224ab67289c61f021a1cef2e99a4b61aa3f8991ce90f52b19d6ec93a5a041e5ee4988803e6ef239c8b91445 WHIRLPOOL 8f952936f06d95c4eba4803752d690831d9e60b5f66e289d5c9083108f66bae403917c42744d4a611d636a69c2bd11d69c51c59ce3f899fe3fa94d15e30c4cfd
 EBUILD rust-0.11.0-r2.ebuild 2681 SHA256 592ae50e12baba81a43cdc32fde8d533524e34ca6bf27098fe0179a1f8d93102 SHA512 1a8f9b793101716f39d6c1738ca160911f5879eee754da919d2a500240fa0da21ea136c10951811f43f85667ce0865fb9221c4be709f4bc809b40a91bbbd6a6a WHIRLPOOL 9a951c8b438546a776c16d3d4ba16bd3e94a9bc1ec76c18b983d772f81aac927635a7d854fb106ba3c3d37af9b13c832992c93caf7298b8005261e4838d4c595
 EBUILD rust-0.12.0.ebuild 2853 SHA256 f42641ffbe5099412673e31b1af817858fc4e9c0f5fa502f473d3a7ee332af9d SHA512 13598476ec6020017b5e8ede25996d7bc86ced6da926245a6768a1f62127c86606d190db517150a58ef8069f9aa23053cb60efe99f16a0cb4fc8548c881f1def WHIRLPOOL 738f9db1280d23da4c040b1362ff9f90c751c7a2c4a5b21eb8cc76b3fe18e66f5efea027962bf9dff4dc2a796525a2e9328d7d3640411426ad16562a7a252a91
-EBUILD rust-999-r1.ebuild 2865 SHA256 c9eae75c6872ec641af7a597e400be39483f140649ae69a61230127281c2b5b6 SHA512 21538c96cad0ba007f1b06196b7abe1440647d56e072c69e5a4510d34722f4d40f970c07779c21b0a3ae83f41247293c387a30d9d2c387db37023ab5f9c6050b WHIRLPOOL 6399a051108005c1f36f4cb5026ffb014a35983f0d9e5cb79ac9311c87efff8b2675ee45773b5318c83a304b9933ff9b8efe0df5181311a3706c18e852e0a7a2
-EBUILD rust-9999-r3.ebuild 2758 SHA256 4f0e579e75c7f290085109cd1aacb1624a70776999b017ab0409e62025b2b0c6 SHA512 d3f3be7c2396a04a6fe8379985716a5f9def4b87ce6dd1e12273dc029687be5a6742074ec73d6e19842b6c4d5986462ec0935e856f35980924c2c567ee0114b1 WHIRLPOOL ff40730a002589203cdb4f552e31e82b191cb45d5698a8b7d58dcf8d8e49bfe9ada63be1a2f9cc151004c73e50aa5717949764248e7c8428a711f05fe1975257
-MISC ChangeLog 1845 SHA256 c9a21fd237a240c5eb0d09a32bd14ef00eccf7c9ef45d5f71b390f2005eabc1f SHA512 0e5908c458d1352cb4a13051303dfc67d3f01ef29328bcbd8c7a7d4f7765ab9029df94fdb9588212aed5878bb5ec4ff01b899cd1a09b374028109a224ea4adb9 WHIRLPOOL 65fa221bec1788b96c7a75fc58da4df71db590ba5976f09f4c6cd69c8b51b09a5f0beae05792f08326412dde6a36f0f405bb5966070585c5362251409865046d
-MISC metadata.xml 535 SHA256 17df65c4702c3ce2a237e6cc623285e67b862d7ca2d704653d5a06a2f7818cc0 SHA512 ac82235e80a43097e83a6a484def8bb6caa788956c9d2293bd2c473a71166e9de247d562a39b56f05367d3231516b4859e562b0dafddf4d99d8afa5fe4bc667f WHIRLPOOL a3721ce9389ffb2362ceb84dfb3aed1c81f26e8daa5c53fe41da6bb4ce0bc06367c24e5d7fe6999b894dd75d79a717ff0dc4bdd42562885a41076496a444f041
+EBUILD rust-999-r1.ebuild 3035 SHA256 2f4be46d84d29795e5e73c652805ea07944f3e37640a2a4aac6e47dfe5697c16 SHA512 59f046b18547e3247fc5822ef39b6396c24435a55d9d8ca1560bd50a8bd5eb38031ee01d3c4a82147996c79a1b895ddd21d09a45dc0b9ad75c85ae6e9e791a76 WHIRLPOOL 02b404e49498e5dd8723e58b702810cdcadd00584554e08317facdb501d6df682370f1274de0aea083ebfabfbeb92ed11dbfc8b33449594f22fb720802bd42ef
+EBUILD rust-9999-r3.ebuild 2888 SHA256 7b9dae199e872b8947a9700aa4961d31689b0d1333236358cb8322b3c0825b12 SHA512 c42f95972726fee3025cb1941f0fe39baca12cb1ac2fdd775de6673ac5623c707027105546da4a404e7eff8d011e7b1683b3c517dd41f3bdaf6b28564d21eaf9 WHIRLPOOL 9e7aaf75ea10255db69d0524c9fa1850b36f8288583b3c1b4215dbddca8884e7bd251e29b8edfdfe86ee31116de303514e9bc79a816afe778f30066445baccb3
+MISC ChangeLog 2079 SHA256 a48bc6bb3353afa19e12b67605c4dc8aaf9569b1a067aa9958586f0d09b0f450 SHA512 ce1fea4a418613bca326f2d9fd7aa8aeacfd87db0c2e80a3f3f196b16f088abe7594a780c047ab1974975878e7e6bf508b1a6f2281d4a505d2081e473637b6c1 WHIRLPOOL 693e93c8f1ae54d9135d76de28c20454494e40eae72852641b2efa19f943c72086d9f92ba18cc2912d26afb6a9876d767b4f9888a4c22f95787e200c2387e3a2
+MISC metadata.xml 640 SHA256 bba702bdf7c373f2e1fb79357079e8dab4718120bbc9c4abb2be668233704725 SHA512 93f7a1bf5a702748f9e357b5d23c6133e5120f0a5dcd3b195ed41e71180d4a52b8249b5e06e994d03abe8b2745e2dcac4a958faa41bcaa3f55519b31272c25ad WHIRLPOOL 7dc14afd594e1e230297c6a64600f07454117171f6627f847f7105467585400b8433e861f3837d7a5f171263bab839dca12796cb988d41aa0b11a552a9498b7b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUQmGsAAoJELvuk32y76HUyEIP/21DlU8kH+5INhDhyQebrSfo
-ScsruDUEvIrYfH0SmnsUVzJpO+kAePBU8b84kmpQ123xL5u33pA+JUsqBaSoQaxT
-pknlRQxb3tUVRRG+53wk/54xTLbSQ0ywpwEfs63pt8sv17gE5wWmbTcLJFmwUn4H
-8qIPEfZnftlszYf6nAHul7h1+7FiEDWOVDdjhWcFPHHQcHVRhA05fUGSzmZwSprI
-O47HjWTN056cnoo0dWCgRkD3c1Z5X98UcXgPAeH8Uu4YEvo78+7DgXj+Cpf2igMI
-neBYie52Xo9aENyhrMGz/Z21GVkqQ+fbVy9E2zcIs68mjSm5YBsiFpU7vFarwmk5
-D+X68ZbqrWkHekzldXtaZrkXjjpXGn/hIXe3vhqeOptOF41KAx44i04t0kbVIyHz
-oaaMVPMF0NWZLQxPfnHL79jCWPXRNPCrI84sPcHl4a10+aVg2Ui2PNk8c3CRLJVJ
-/vi4pfruyxUFMDtw1nk9iXWXFnbJJskh1NHlcKtE9I5zjtmJust8gxnPBd6ugQyo
-hXkAs4SR6FtDjfEKz89c4YEs5J5HjpXnkjN9d8FiM7s8wgz0w/7zcjnmuk9eI0vN
-Ow7iWsF/hApoGo8Txc59EdMN/M/U1qxPNmMxXrky0az8s6iZE8xnWOTNX3WDi8nZ
-v3iPQYQkf06i/QEQvYFo
-=0Z7r
+iQIcBAEBCAAGBQJUbxZMAAoJELvuk32y76HUjoUP/1FTyf8WYJfFVXW5ri4LJe75
+Uxv/605PJSv5ygLCDE8gN5Jay6kceWvkN3RrQnzbxD8q0Ar5hgGhCSHmFKJfAR4h
+atEDQPKOJ+dN5YnsoQ6e/In/nW1PsfcMOU6l9gzoYnm+PiBAhqKrmd4XMuUdu0Ro
+j3jgY/Ur5ud/IeBJ7p0DKmHDFHiwkBHGUeSn5LyOYmIMT4AVdvzh+p4YTmeymFfL
+krgnU63peYMAL5eIQ9CW/ByTy3hL2IMAnr8yJt7cCgMBBc0NhfAtjEdEQ27HqZjk
+6JYDwDipWDn4prSnpn1GRyzmH6TgmNOr2IXa5mvqcUYVkyJpO40P1HxpoatxtqTB
+CUT+3XiY9avxdtnvUjBQHuNe5URoMvMgmLlyipNTBZIYFW4vzS5u7z2Bmf9YPGyL
+h7IJOh6GoGS2kuAaJmOLENiH8n6vZJbeQhjCWs4hPCDAgF2xeirYlSKbbABwa3XH
+Xg34hiyphxTuvKdpZTeOFIoi26yhqlaSVicrxLC0wMOsLkqEdF/fGzz5IM19tNFw
+j4SHOgetVK2P3TL/BoyrZ+gXeRAfLk7ZY8IyCM5zfYSHl7Wr4c5P0DHlJ1Yj3iBd
+84/BMBsPtKfa3zaNoqm/zuk9Be/yyCkbCcuIo+uMmL/WUTnz/YTocQpcW0VhpoGa
+4p6KaBY/c38etRpR0bbZ
+=EPWj
 -----END PGP SIGNATURE-----
