@@ -12,5 +12,7 @@
     <flag name="clang">Use <pkg>sys-devel/clang</pkg> for building</flag>
     <flag name="libcxx">Use <pkg>sys-libs/libcxx</pkg> as standard
     library when building with <pkg>sys-devel/clang</pkg></flag>
+    <flag name="system-llvm">Use system <pkg>sys-devel/llvm</pkg> in
+    place of the bundled one</flag>
   </use>
 </pkgmetadata>
